fixed success toast bug on mobile screen

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,7 @@ body {
   .Toastify__toast-container--top-right {
     top: 3.5em;
     right: 0;
+    left: unset;
     width: 15rem;
   }
   .Toastify__toast--success {
